--- a/src2/package.xml
+++ b/src2/package.xml
@@ -5,7 +5,7 @@
         <name>ApexClass</name>
     </types>
     <types>
-        <members>Account</members>
+        <members>Doctor__c</members>
         <name>CustomObject</name>
     </types>
     <version>55.0</version>
