--- a/src2/package.xml
+++ b/src2/package.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Employee__c</members>
+        <members>Import__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>BarQR__Barcode_Config__c</members>
         <name>CustomObject</name>
     </types>
     <version>55.0</version>
